@@ -22,6 +22,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
@@ -31,6 +32,7 @@ import javax.mail.Flags;
 import org.apache.james.mailbox.MailboxManager;
 import org.apache.james.mailbox.MailboxSession;
 import org.apache.james.mailbox.MessageManager;
+import org.apache.james.mailbox.MessageUid;
 import org.apache.james.mailbox.exception.MailboxException;
 import org.apache.james.mailbox.model.MessageRange;
 import org.apache.james.mailbox.model.MessageResult;
@@ -43,7 +45,7 @@ public class MailboxAdapter implements Mailbox {
     private static abstract class POP3FetchGroup implements FetchGroup {
         @Override
         public Set<PartContentDescriptor> getPartContentDescriptors() {
-            return null;
+            return new HashSet<PartContentDescriptor>();
         }
     }
 
@@ -96,7 +98,7 @@ public class MailboxAdapter implements Mailbox {
     public InputStream getMessageBody(String uid) throws IOException {
         try {
             mailboxManager.startProcessingRequest(session);
-            Iterator<MessageResult> results = manager.getMessages(MessageRange.one(new Long(uid)), BODY_GROUP, session);
+            Iterator<MessageResult> results = manager.getMessages(MessageUid.of(Long.valueOf(uid)).toRange(), BODY_GROUP, session);
             if (results.hasNext()) {
                 return results.next().getBody().getInputStream();
             } else {
@@ -113,7 +115,7 @@ public class MailboxAdapter implements Mailbox {
     public InputStream getMessageHeaders(String uid) throws IOException {
         try {
             mailboxManager.startProcessingRequest(session);
-            Iterator<MessageResult> results = manager.getMessages(MessageRange.one(new Long(uid)), HEADERS_GROUP,
+            Iterator<MessageResult> results = manager.getMessages(MessageUid.of(Long.valueOf(uid)).toRange(), HEADERS_GROUP,
                     session);
             if (results.hasNext()) {
                 return results.next().getHeaders().getInputStream();
@@ -131,7 +133,7 @@ public class MailboxAdapter implements Mailbox {
     public InputStream getMessage(String uid) throws IOException {
         try {
             mailboxManager.startProcessingRequest(session);
-            Iterator<MessageResult> results = manager.getMessages(MessageRange.one(new Long(uid)), FULL_GROUP, session);
+            Iterator<MessageResult> results = manager.getMessages(MessageUid.of(Long.valueOf(uid)).toRange(), FULL_GROUP, session);
             if (results.hasNext()) {
                 return results.next().getFullContent().getInputStream();
             } else {
@@ -152,7 +154,7 @@ public class MailboxAdapter implements Mailbox {
             List<MessageMetaData> mList = new ArrayList<MessageMetaData>();
             while (results.hasNext()) {
                 MessageResult result = results.next();
-                MessageMetaData metaData = new MessageMetaData(Long.toString(result.getUid()), result.getSize());
+                MessageMetaData metaData = new MessageMetaData(String.valueOf(result.getUid().asLong()), result.getSize());
                 mList.add(metaData);
             }
             return Collections.unmodifiableList(mList);
@@ -165,10 +167,10 @@ public class MailboxAdapter implements Mailbox {
 
     @Override
     public void remove(String... uids) throws IOException {
-        List<Long> uidList = new ArrayList<Long>();
+        List<MessageUid> uidList = new ArrayList<MessageUid>();
 
         for (String uid : uids) {
-            uidList.add(new Long(uid));
+            uidList.add(MessageUid.of(Long.valueOf(uid)));
         }
 
         List<MessageRange> ranges = MessageRange.toRanges(uidList);
